# stone-data-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
dash/: app.py
dash/assets/: style.css
docs/: data_dict.md  index.md
info/: Dicionário de Dados - Data Challenge 2022.xlsx
notebooks/: analysis.ipynb  data_checks.ipynb  describe.ipynb  final_composition.ipynb  final_composition_v2.ipynb  geral_and_comunicados.ipynb  merging.ipynb  notification_analysis.ipynb  test.ipynb
notebooks/archive/: clustering.ipynb  clustering_v2.ipynb  final_composition copy.ipynb
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/data_dict/: index.html
site/search/: search_index.json
src/clustering_pipeline/: clustering.py
src/feature_engineering/: features.py
src/make_plot/: plot.py
tests/: test_stone_data_challenge.py
