[tool.poetry]
name = "stone-data-challenge"
version = "0.1.0"
description = ""
authors = ["Luba <luciano.eq@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.4.2"
pre-commit = "2.18.1"
mkdocs-material = "8.2.11"
mkdocs-mermaid2-plugin = "0.6.0"
ipykernel = "6.13.0"
dash = "2.3.1"
flake8 = "4.0.1"
isort = "5.10.1"
nbformat = "5.3.0"
black = "22.3.0"
streamlit = "1.8.1"
dash-bootstrap-components = "1.1.0"
matplotlib = "3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
